# agent-doc

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SKILL.md  SPEC.md  SPECS.md  VERSIONS.md  book.toml  install.sh  pyproject.toml
.claude/skills/agent-doc/: SKILL.md
.github/workflows/: ci.yml  pypi.yml  release.yml
docs/: SUMMARY.md  introduction.md
docs/development/: building.md  conventions.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guide/: agent-backends.md  commands.md  components.md  dashboard.md  document-format.md  editor-integration.md  submit-flow.md
docs/reference/: changelog.md  ipc.md  race-conditions.md  reactive-stream.md  specs.md
editors/: SPEC.md
editors/jetbrains/: .gitignore  AGENTS.md  SPEC.md  build.gradle.kts  gradle.properties  junie-bridge.sh  settings.gradle.kts
editors/jetbrains/src/main/kotlin/com/github/btakita/agentdoc/: AgentDocActionPromoter.kt  AgentDocPopupAction.kt  ClaimAction.kt  EditorTabSyncListener.kt  PatchWatcher.kt  PluginLifecycleListener.kt  PromptPanel.kt  PromptPoller.kt  RunWithJunieAction.kt  SlashCommandCompletionContributor.kt  SubmitAction.kt  SyncLayoutAction.kt  TerminalUtil.kt
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
specs/: pane-groups.md
src/: audit_docs.rs  autoclaim.rs  claim.rs  clean.rs  commands.rs  compact.rs  component.rs  config.rs  convert.rs  crdt.rs  diff.rs  focus.rs  frontmatter.rs  git.rs  init.rs  layout.rs  main.rs  merge.rs  mode.rs  outline.rs  patch.rs  plugin.rs  prompt.rs  recover.rs  reset.rs  resync.rs  route.rs  sessions.rs  skill.rs  snapshot.rs  start.rs  stream.rs  submit.rs  sync.rs  template.rs  upgrade.rs  watch.rs  write.rs
src/agent/: claude.rs  junie.rs  mod.rs  streaming.rs
tests/: test_cli.rs
