[package]
name = "agent-doc"
version = "0.1.0"
edition = "2021"
description = "Interactive document sessions with AI agents"
license = "MIT"
repository = "https://github.com/btakita/agent-doc"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
once_cell = "1"
regex = "1"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"