[package]
name = "agent-doc"
version = "0.4.2"
edition = "2021"
description = "Interactive document sessions with AI agents"
license = "MIT"
repository = "https://github.com/btakita/agent-doc"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
instruction-files = { path = "../instruction-files", version = "0.1" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true