[package]
name = "agent-doc"
version = "0.13.1"
edition = "2024"
description = "Interactive document sessions with AI agents"
license = "MIT"
repository = "https://github.com/btakita/agent-doc"
readme = "README.md"

[dependencies]
anyhow = "1"
fs2 = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
tempfile = "3"
zip = "2"
uuid = { version = "1", features = ["v4"] }
notify = "7"
agent-kit = { path = "../agent-kit", version = "0.2" }
instruction-files = { path = "../instruction-files", version = "0.1" }
tmux-router = { path = "../tmux-router", version = "0.2.2" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true