[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "agent-doc"
version = "0.1.0"
description = "Interactive document sessions with AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/btakita/agent-doc"
Documentation = "https://btakita.github.io/agent-doc"

[tool.maturin]
bindings = "bin"
strip = true
